# phones.py
@@ -1,23 +1,6 @@
 from flask import make_response, abort
-
-
-PHONES = {
-    "87656448839": {
-        "first_name": "Doug",
-        "last_name": "Farrell",
-        "number": '87656448839'
-    },
-    "84767658907": {
-        "first_name": "Kent",
-        "last_name": "Brockman",
-        "number": '84767658907'
-    },
-    "84563289754": {
-        "first_name": "Bunny",
-        "last_name": "Easter",
-        "number": '84563289754'
-    }
-}
+from config import db
+from models import Phone, PhoneSchema
 
 
 def read_all():
@@ -26,74 +9,88 @@ def read_all():
     with the complete lists of phones
     :return:        json string of list of phones
     """
-    return [PHONES[key] for key in sorted(PHONES.keys())]
+    phones = Phone.query.order_by(Phone.last_name).all()
+    # Serialize the data for the response
+    phone_schema = PhoneSchema(many=True)
+    data = phone_schema.dump(phones)
+    return data
 
 
-def read_one(number):
+def read_one(phone_id):
     """
-    This function responds to a request for /api/phones/{pk}
+    This function responds to a request for /api/phones/{phone_id}
     with one matching phone from phones
-    :param number:   pk of phone to find
-    :return:        phone matching pk
+
+    :param phone_id:   ID of phone to find
+    :return:            phone matching ID
     """
-    phone = {}
-    if number in PHONES:
-        phone = PHONES.get(number)
+    phone = Phone.query.filter(Phone.phone_id == phone_id).one_or_none()
+    if phone is not None:
+        # serialize the data
+        phone_schema = PhoneSchema()
+        return phone_schema.dump(phone).data
     else:
-        abort(404, "phone with number {number} not found".format(number=number))
-    return phone
+        abort(404, 'Phone not found for Id: {}'.format(phone_id))
 
 
 def create(phone):
     """
-    This function creates a new phone in the phones structure
+    This function creates a new phone in the phones db
     based on the passed in phone data
-    :param phone:  phone to create in phones structure
-    :return:        201 on success, 406 if phone exists
+    :param phone:  phone to create in phones db
+    :return:        201 CREATED on success, 406 if phone exists
     """
-    first_name = phone.get("first_name", None)
-    last_name = phone.get("last_name", None)
-    number = phone.get("number", None)
+    number = phone.get("number")
 
-    if number not in PHONES and number is not None:
-        PHONES[number] = {
-            "first_name": first_name,
-            "last_name": last_name,
-            "number": number,
-        }
-        return make_response(
-            "{number} successfully created".format(number=number), 201
-        )
+    existing_phone = Phone.query.filter(Phone.number == number).one_or_none()
+    if existing_phone is None:
+        schema = PhoneSchema()
+        new_phone = schema.load(phone, session=db.session)
+        db.session.add(new_phone)
+        db.session.commit()
+        return schema.dump(new_phone), 201
     else:
-        abort(406, "phone with number {number} already exists".format(number=number))
+        abort(409, f'Phone {number} exists already')
 
 
-def update(number, phone):
+def update(phone_id, phone):
     """
-    This function updates an existing phone in the phones structure
-    :param number:  phone number to update in the phones structure
+    This function updates an existing phone in the phones db
+    :param phone_id:  id of the phone to update in the phones db
     :param phone:  phone to update
-    :return:        updated phone structure
+    :return:        updated phone db
     """
-    if number in PHONES:
-        PHONES[number]["first_name"] = phone.get("first_name")
-        PHONES[number]["last_name"] = phone.get("last_name")
-        PHONES[number]["number"] = number
-        return PHONES[number]
+    phone_to_upd = Phone.query.filter(Phone.phone_id == phone_id).one_or_none()
+    number = phone.get("number")
+    existing_phone = (Phone.query.filter(Phone.number == number).one_or_none())
+
+    if phone_to_upd is None:
+        abort(404, "Phone not found for id: {}".format(phone_id))
+    elif existing_phone is not None and existing_phone.phone_id != phone_id:
+        abort(409, "Phone {} exists already".format(number))
     else:
-        abort(404, "phone with last number {number} not found".format(number=number))
+        schema = PhoneSchema()
+        update = schema.load(phone, session=db.session)
+        update.phone_id = phone_to_upd.phone_id
+        db.session.merge(update)
+        db.session.commit()
+        data = schema.dump(phone_to_upd)
+        return data, 200
 
 
-def delete(number):
+def delete(phone_id):
     """
-    This function deletes a phone from the phones structure
-    :param number:   phone number to delete
+    This function deletes a phone from the phones db
+    :param phone_id:   phone number to delete
     :return:        200 on successful delete, 404 if not found
     """
-    if number in PHONES:
-        del PHONES[number]
+    phone = Phone.query.filter(Phone.phone_id == phone_id).one_or_none()
+
+    if phone is not None:
+        db.session.delete(phone)
+        db.session.commit()
         return make_response(
-            "{number} successfully deleted".format(number=number), 200
+            "Phone {} deleted".format(phone.number), 200
         )
     else:
-        abort(404, "phone with number {number} not found".format(number=number))
+        abort(404, "Phone not found for Id: {}".format(phone_id))
