# swagger.yml
@@ -37,6 +37,8 @@ paths:
             type: array
             items:
               properties:
+                phone_id:
+                  type: integer
                 first_name:
                   type: string
                 last_name:
@@ -70,8 +72,22 @@ paths:
       responses:
         201:
           description: Successfully created phone in list
+          schema:
+            properties:
+              phone_id:
+                type: integer
+                description: Id of the phone
+              first_name:
+                type: string
+                description: First name of the phones'owner
+              last_name:
+                type: string
+                description: Last name of the phone's owner
+              number:
+                type: string
+                description: phone number
 
-  /phones/{number}:
+  /phones/{phone_id}:
     get:
       operationId: phones.read_one
       tags:
@@ -79,22 +95,28 @@ paths:
       summary: Read one phone from the phones list
       description: Read one phone from the phones list
       parameters:
-        - name: number
+        - name: phone_id
           in: path
-          description: number of the phone to get from the list
-          type: string
+          description: id of the phone to get from the list
+          type: integer
           required: True
       responses:
         200:
           description: Successfully read phone from phones list operation
           schema:
             properties:
+              phone_id:
+                type: integer
+                description: Id of the phone
               first_name:
                 type: string
+                description: First name of the phones'owner
               last_name:
                 type: string
+                description: Last name of the phone's owner
               number:
                 type: string
+                description: phone number
 
     put:
       operationId: phones.update
@@ -103,10 +125,10 @@ paths:
       summary: Update a phone in the phones list
       description: Update a phone in the phones list
       parameters:
-        - name: number
+        - name: phone_id
           in: path
-          description: number of the phone to update in the list
-          type: string
+          description: id of the phone to update in the list
+          type: integer
           required: True
         - name: phone
           in: body
@@ -130,9 +152,9 @@ paths:
       summary: Delete a phone from the phones list
       description: Delete a phone
       parameters:
-        - name: number
+        - name: phone_id
           in: path
-          type: string
+          type: integer
           required: True
       responses:
         200:
